--- a/docker/proyecto/docker-compose.postgres.yml
+++ b/docker/proyecto/docker-compose.postgres.yml
@@ -2,23 +2,23 @@ version: '3.7'
 
 services:
   postgres:
-    image: postgres:15
+    image: postgres:18
     restart: always
     environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=prisma
+      - POSTGRES_DB=pruebanext
+      - POSTGRES_USER=olga
+      - POSTGRES_PASSWORD=1234
     ports:
       - "5432:5432"
     networks:
       - prisma-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U prisma -d postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U olga -d pruebanext" ]
       interval: 5s
       timeout: 2s
       retries: 20
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/18/docker
     command: postgres -c listen_addresses='*'
     logging:
       options:
@@ -28,5 +28,15 @@ services:
 networks:
   prisma-network:
 
+
 volumes:
   postgres_data:
+
+
+adminer:
+  image: adminer
+  restart: always
+  ports:
+    - 9900:8080
+  networks:
+    - prisma-network
