feat: reorganize docker-compose file and update Prisma schema for User model

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "compose": "docker compose -f ./docker/proyecto/docker-compose.postgres.yml up -d"
   },
   "dependencies": {
     "@prisma/client": "^7.4.0",
